# ex_axum_diesel_integration_tests

./: .env  Cargo.toml  README.md  diesel.toml
api_application/: Cargo.toml
api_application/src/: lib.rs
api_application/src/routes/: mod.rs
api_common/: Cargo.toml
api_common/src/: lib.rs  state.rs
api_common/src/middleware/: mod.rs
data_access/: Cargo.toml
data_access/src/: db.rs  ident.rs  lib.rs  schema.rs
data_access/src/dal/: org.rs
data_access/src/dao/: mod.rs  org.rs
data_access/src/integration_tests/: common.rs
data_access/src/model/: org.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/src/api_tests/: registration.rs
migrations/2025-01-17-225925_org/: down.sql  up.sql
service/: Cargo.toml
service/src/: main.rs  service_info.rs
