[package]
name = "api_application"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_common = { path = "../api_common" }
axum = { version = "0.8.1", features = [ "json", "query", "macros", "multipart" ] }
base64 = "0.22.1"
bytes = "1.7.2"
cookie = "0.17.0"
data_access = { path = "../data_access" }
http = "1.0.0"
regex = { version = "1.7.0", default-features = false, features = ["std", "perf", "unicode-case"] }
serde = "1.0"
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"

[dev-dependencies]
axum-macros = "0.3.8"
pretty_assertions = "1.3.0"

[features]
receiver = []
sender = []
default = ["receiver", "sender"]

