[package]
name = "api_common"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = [ "json", "query", "macros", "multipart" ] }
data_access = { path = "../data_access" }
chrono = { version = "0.4.24", features = ["serde"] }
cookie = "0.17.0"
http = "1.0.0"
regex = { version = "1.7.0", default-features = false, features = ["std", "perf", "unicode-case"] }
serde = "1.0"
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tower-request-id = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.31"

[dev-dependencies]
axum-macros = "0.3.8"
