[package]
name = "data_access"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.6", features = ["mysql", "extras", "r2d2", "time"] }
dotenv = "0.15.0"
rayon = "1.5.3"
regex = { version = "1.7.0", default-features = false, features = ["std", "perf", "unicode-perl"] }
rust-argon2 = "1.0"
schemars = { version = "0.8.16", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
time = { version = "0.3.36", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
tracing = "0.1.41"

[dev-dependencies]
approx = "0.5.1"
openssl = "0.10.64"
pretty_assertions = "1.3.0"

[features]
test_util = []
