[package]
name = "integration_tests"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
api_application = { path = "../api_application" }
api_common = { path = "../api_common" }
data_access = { path = "../data_access", features = ["test_util"] }
openssl = "0.10.43"
tokio = { version = "1.42", features = ["full"] }
axum-test = "17.1.0"
http = "1.2.0"
serde_json = "1.0.135"

[dev-dependencies]
pretty_assertions = "1.3.0"

