[package]
name = "service"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
api_application = { path = "../api_application" }
api_common = { path = "../api_common" }
data_access = { path = "../data_access" }
axum = { version = "0.8.1", features = [ "json" ] }
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
http = "1.1.0"
serde = "1.0"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tower-layer = "0.3.2"
tower-request-id = "0.3.0"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
futures-util = "0.3.25"
anyhow = "1"
rusty-hook = "0.11.2"

[features]
sender = []
http = []
grpc = []
default = ["http", "grpc", "sender"]
